libdd-heap-sampler/include/datadog/heap/sample_flag.h

/*
 * Per-thread initialisation required by the flagging scheme.
 * Must be called once per thread before dd_sample_flag_apply/check are used.
 * On arm64 this issues prctl(PR_SET_TAGGED_ADDR_CTRL) so tagged pointers
 * survive syscalls; on other architectures this is a no-op.
 *
 * Returns true when the thread is safe to sample and false when the
 * flagging scheme is unavailable (e.g. arm64 kernel/seccomp rejected
 * PR_SET_TAGGED_ADDR_CTRL). Callers must treat a false return as
 * "disable sampling on this thread" and never call
 * dd_sample_flag_apply on it, otherwise tagged pointers will be
 * rejected by the kernel with EFAULT on the next syscall.
 */
bool dd_sample_flag_thread_init(void);
/*
 * Apply the sampled flag. Takes the raw pointer from the underlying
 * allocator and returns the user-visible pointer to hand to the
 * application. On architectures that offset the user pointer inside a
 * bumped allocation (x86-64), the offset is picked to satisfy the
 * caller-requested alignment.
 */
void *dd_sample_flag_apply(void *raw, size_t alignment);
/*
 * If `user` was previously returned by dd_sample_flag_apply, write the
 * raw pointer (to pass to the underlying free) into *raw_out and return
 * true. Otherwise leave *raw_out untouched and return false.
 */
bool dd_sample_flag_check(void *user, void **raw_out);
/*
 * Non-destructive variant of dd_sample_flag_check. Useful for realloc:
 * callers can resolve the raw pointer before calling the underlying
 * realloc, while leaving the old allocation's flag intact in case
 * realloc fails and the old allocation remains live.
 *
 * If `user` is sampled, returns true and fills raw_out / offset_out
 * without clearing the allocation's flag header.
 */
bool dd_sample_flag_peek(void *user, void **raw_out, size_t *offset_out);