libdd-profiling-heap-sampler/include/datadog/heap/tl_state.h

/* 512 KiB mean between samples. */
#define DD_SAMPLING_INTERVAL_DEFAULT (512u * 1024u)
/* Per-thread state for the Poisson sampler. See file header for the
 * rationale behind _Thread_local vs pthread TLS. */
typedef struct {
     uint64_t sampling_interval;             /* mean bytes between samples.
                                               This _will probably_ be constant, but if we
                                               drop it in the TLS we afford the eBPF profiler
                                               the opportunity to tune it to adjust overhead
                                               dynamically. A value of 0 explicitly disables
                                               sampling for this thread. */
    int64_t  remaining_bytes;               /* signed counter; sample when >= 0 */
    bool     remaining_bytes_initialized;   /* false until first interval drawn */
    bool     initialized;                   /* false until dd_tl_state_init() has run;
                                               field rather than a separate _Thread_local
                                               so only one TLS lookup is needed on the
                                               fast path (avoids a second TLSDESC call). */
    bool     reentry_guard;                 /* Set between dd_allocation_requested_slow and
                                               dd_allocation_created_slow while a sampled
                                               allocation is in flight.

                                               The slow path can itself trigger allocations:
                                               log() in next_interval() may touch lazy-init'd
                                               libc state on first call; USDT emission and any
                                               attached eBPF consumer can cause incidental
                                               userspace allocation; TLS materialisation on a
                                               fresh thread may call calloc.

                                               Without this guard, those inner allocations
                                               would re-enter dd_allocation_requested, corrupt
                                               the remaining_bytes counter, and in the worst
                                               case recurse infinitely. While the guard is set
                                               the fast path bails out immediately and the
                                               inner allocation is passed through unsampled. */
    uint32_t rng;                           /* LCG state */

} dd_tl_state_t;
/*
 * Returns the current thread's state, or NULL if not yet initialised.
 * Never allocates. Callers must treat NULL as "don't sample".
 */
static inline __attribute__((always_inline))
dd_tl_state_t *dd_tl_state_get(void) {
    if (__builtin_expect(!dd_tl_state_storage.initialized, 0)) return NULL;
    return &dd_tl_state_storage;
}
/*
 * Ensures the current thread's tracking state exists, initializing it on the
 * first call and doing nothing on subsequent calls. This is a fire-and-forget
 * command: call it to eagerly warm TLS (e.g. from a thread-start hook) so the
 * first tracked allocation on the thread doesn't pay the init cost. Callers
 * that need the pointer should use dd_tl_state_get_or_init() instead.
 */
void dd_tl_state_init(void);
/*
 * Returns the current thread's tracking state, initializing it on first use.
 */
static inline __attribute__((always_inline))
dd_tl_state_t *dd_tl_state_get_or_init(void) {
    if (__builtin_expect(!dd_tl_state_storage.initialized, 0)) dd_tl_state_init();
    return &dd_tl_state_storage;
}