libdd-profiling-heap-sampler/src/generated/bindings.rs

// Copyright 2025-Present Datadog, Inc. https://www.datadoghq.com/
// SPDX-License-Identifier: Apache-2.0
// @generated by libdd-profiling-heap-sampler/build.rs via bindgen; do not edit by hand.
// Regenerate with: LIBDD_PROFILING_HEAP_SAMPLER_REGEN=1 cargo build -p libdd-profiling-heap-sampler

/* automatically generated by rust-bindgen 0.71.1 */

pub const DD_SAMPLING_INTERVAL_DEFAULT: u32 = 524288;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct dd_tl_state_t {
    pub sampling_interval: u64,
    pub remaining_bytes: i64,
    pub remaining_bytes_initialized: bool,
    pub initialized: bool,
    pub reentry_guard: bool,
    pub rng: u32,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of dd_tl_state_t"][::std::mem::size_of::<dd_tl_state_t>() - 24usize];
    ["Alignment of dd_tl_state_t"][::std::mem::align_of::<dd_tl_state_t>() - 8usize];
    ["Offset of field: dd_tl_state_t::sampling_interval"]
        [::std::mem::offset_of!(dd_tl_state_t, sampling_interval) - 0usize];
    ["Offset of field: dd_tl_state_t::remaining_bytes"]
        [::std::mem::offset_of!(dd_tl_state_t, remaining_bytes) - 8usize];
    ["Offset of field: dd_tl_state_t::remaining_bytes_initialized"]
        [::std::mem::offset_of!(dd_tl_state_t, remaining_bytes_initialized) - 16usize];
    ["Offset of field: dd_tl_state_t::initialized"]
        [::std::mem::offset_of!(dd_tl_state_t, initialized) - 17usize];
    ["Offset of field: dd_tl_state_t::reentry_guard"]
        [::std::mem::offset_of!(dd_tl_state_t, reentry_guard) - 18usize];
    ["Offset of field: dd_tl_state_t::rng"][::std::mem::offset_of!(dd_tl_state_t, rng) - 20usize];
};
unsafe extern "C" {
    #[link_name = "dd_tl_state_get__extern"]
    pub fn dd_tl_state_get() -> *mut dd_tl_state_t;
}
unsafe extern "C" {
    pub fn dd_tl_state_init();
}
unsafe extern "C" {
    #[link_name = "dd_tl_state_get_or_init__extern"]
    pub fn dd_tl_state_get_or_init() -> *mut dd_tl_state_t;
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct dd_alloc_req_t {
    pub size: usize,
    pub user_size: usize,
    pub alignment: usize,
    pub weight: u64,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of dd_alloc_req_t"][::std::mem::size_of::<dd_alloc_req_t>() - 32usize];
    ["Alignment of dd_alloc_req_t"][::std::mem::align_of::<dd_alloc_req_t>() - 8usize];
    ["Offset of field: dd_alloc_req_t::size"]
        [::std::mem::offset_of!(dd_alloc_req_t, size) - 0usize];
    ["Offset of field: dd_alloc_req_t::user_size"]
        [::std::mem::offset_of!(dd_alloc_req_t, user_size) - 8usize];
    ["Offset of field: dd_alloc_req_t::alignment"]
        [::std::mem::offset_of!(dd_alloc_req_t, alignment) - 16usize];
    ["Offset of field: dd_alloc_req_t::weight"]
        [::std::mem::offset_of!(dd_alloc_req_t, weight) - 24usize];
};
unsafe extern "C" {
    #[link_name = "dd_alloc_req_is_sampled__extern"]
    pub fn dd_alloc_req_is_sampled(req: dd_alloc_req_t) -> bool;
}
unsafe extern "C" {
    pub fn dd_allocation_requested_slow(
        tl: *mut dd_tl_state_t,
        size: usize,
        alignment: usize,
    ) -> dd_alloc_req_t;
}
unsafe extern "C" {
    #[link_name = "dd_allocation_requested__extern"]
    pub fn dd_allocation_requested(size: usize, alignment: usize) -> dd_alloc_req_t;
}
unsafe extern "C" {
    pub fn dd_allocation_created_slow(
        raw: *mut ::std::os::raw::c_void,
        req: dd_alloc_req_t,
    ) -> *mut ::std::os::raw::c_void;
}
unsafe extern "C" {
    #[link_name = "dd_allocation_created__extern"]
    pub fn dd_allocation_created(
        raw: *mut ::std::os::raw::c_void,
        req: dd_alloc_req_t,
    ) -> *mut ::std::os::raw::c_void;
}
unsafe extern "C" {
    pub fn dd_sample_flag_thread_init() -> bool;
}
unsafe extern "C" {
    pub fn dd_sample_flag_apply(
        raw: *mut ::std::os::raw::c_void,
        alignment: usize,
    ) -> *mut ::std::os::raw::c_void;
}
unsafe extern "C" {
    pub fn dd_sample_flag_peek(
        user: *mut ::std::os::raw::c_void,
        raw_out: *mut *mut ::std::os::raw::c_void,
        offset_out: *mut usize,
    ) -> bool;
}
unsafe extern "C" {
    #[link_name = "dd_sample_flag_check__extern"]
    pub fn dd_sample_flag_check(
        user: *mut ::std::os::raw::c_void,
        raw_out: *mut *mut ::std::os::raw::c_void,
    ) -> bool;
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct dd_alloc_freed_t {
    pub ptr: *mut ::std::os::raw::c_void,
    pub size: usize,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of dd_alloc_freed_t"][::std::mem::size_of::<dd_alloc_freed_t>() - 16usize];
    ["Alignment of dd_alloc_freed_t"][::std::mem::align_of::<dd_alloc_freed_t>() - 8usize];
    ["Offset of field: dd_alloc_freed_t::ptr"]
        [::std::mem::offset_of!(dd_alloc_freed_t, ptr) - 0usize];
    ["Offset of field: dd_alloc_freed_t::size"]
        [::std::mem::offset_of!(dd_alloc_freed_t, size) - 8usize];
};
unsafe extern "C" {
    pub fn dd_allocation_freed_slow(
        ptr: *mut ::std::os::raw::c_void,
        raw: *mut ::std::os::raw::c_void,
        size: usize,
        alignment: usize,
    ) -> dd_alloc_freed_t;
}
unsafe extern "C" {
    #[link_name = "dd_allocation_freed__extern"]
    pub fn dd_allocation_freed(
        ptr: *mut ::std::os::raw::c_void,
        size: usize,
        alignment: usize,
    ) -> dd_alloc_freed_t;
}
pub const dd_realloc_kind_t_DD_REALLOC_KIND_PASSTHROUGH: dd_realloc_kind_t = 0;
pub const dd_realloc_kind_t_DD_REALLOC_KIND_ALLOC: dd_realloc_kind_t = 1;
pub const dd_realloc_kind_t_DD_REALLOC_KIND_FREE: dd_realloc_kind_t = 2;
pub const dd_realloc_kind_t_DD_REALLOC_KIND_SAMPLED: dd_realloc_kind_t = 3;
pub type dd_realloc_kind_t = ::std::os::raw::c_uint;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct dd_realloc_prep_t {
    pub raw_ptr: *mut ::std::os::raw::c_void,
    pub raw_size: usize,
    pub old_offset: usize,
    pub alloc_req: dd_alloc_req_t,
    pub kind: dd_realloc_kind_t,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of dd_realloc_prep_t"][::std::mem::size_of::<dd_realloc_prep_t>() - 64usize];
    ["Alignment of dd_realloc_prep_t"][::std::mem::align_of::<dd_realloc_prep_t>() - 8usize];
    ["Offset of field: dd_realloc_prep_t::raw_ptr"]
        [::std::mem::offset_of!(dd_realloc_prep_t, raw_ptr) - 0usize];
    ["Offset of field: dd_realloc_prep_t::raw_size"]
        [::std::mem::offset_of!(dd_realloc_prep_t, raw_size) - 8usize];
    ["Offset of field: dd_realloc_prep_t::old_offset"]
        [::std::mem::offset_of!(dd_realloc_prep_t, old_offset) - 16usize];
    ["Offset of field: dd_realloc_prep_t::alloc_req"]
        [::std::mem::offset_of!(dd_realloc_prep_t, alloc_req) - 24usize];
    ["Offset of field: dd_realloc_prep_t::kind"]
        [::std::mem::offset_of!(dd_realloc_prep_t, kind) - 56usize];
};
unsafe extern "C" {
    pub fn dd_allocation_realloc_prepare(
        old_user: *mut ::std::os::raw::c_void,
        new_size: usize,
    ) -> dd_realloc_prep_t;
}
unsafe extern "C" {
    pub fn dd_allocation_realloc_commit(
        old_user: *mut ::std::os::raw::c_void,
        new_raw: *mut ::std::os::raw::c_void,
        prep: dd_realloc_prep_t,
    ) -> *mut ::std::os::raw::c_void;
}
unsafe extern "C" {
    pub fn dd_probe_alloc(user: *mut ::std::os::raw::c_void, size: u64, weight: u64);
}
unsafe extern "C" {
    pub fn dd_probe_free(ptr: *mut ::std::os::raw::c_void);
}
